--- a/index.html
+++ b/index.html
@@ -451,6 +451,9 @@
           email e apresente-o diretamente no parceiro. Assim, pode aproveitar
           mais e <strong>pagar menos</strong>, com total confiança.
         </p>
+
+        <p>Alguns parceiros podem ter restrições de datas para vouchers com desconto <strong>(especialmente aos fins de semana)</strong>.</p>
+
       </div>
 
     </div>
