--- a/index.html
+++ b/index.html
@@ -457,6 +457,33 @@
           </div>
         </a>
 
+        <!-- Card: Restaurantes -->
+        <a class="experience-card" data-category="gastronomia" href="experience.html?slug=restaurants" style="text-decoration:none;color:inherit">
+          <div class="card-image">
+            <img src="https://images.pexels.com/photos/1397132/pexels-photo-1397132.jpeg" alt="Restaurantes" width="400" height="267" loading="lazy">
+            <div class="card-badge"><span>10% - 40% OFF</span></div>
+            <div class="like-badge" id="like-btn-restaurants" onclick="toggleLike(event, 'restaurants')">
+              <i class="fas fa-heart"></i>
+              <span class="like-count" id="like-count-restaurants">0</span>
+            </div>
+          </div>
+          <div class="card-content">
+            <i class="fas fa-utensils"></i>
+            <h3 data-i18n="experiences.restaurants">Restaurantes</h3>
+            <div class="price-section">
+              <div class="price-original">€50</div>
+              <div class="price-discount">€42,50</div>
+              <div class="savings"><span data-i18n="experiences.save">Poupe</span> €7,50</div>
+            </div>
+            <div class="card-actions">
+              <span class="btn btn-code" style="pointer-events:none">
+                <i class="fas fa-arrow-right"></i>
+                <span data-i18n="experiences.seeRestaurants">Ver restaurantes com desconto</span>
+              </span>
+            </div>
+          </div>
+        </a>
+
       </div>
     </div>
   </section>
