--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         <!-- Card: Restaurantes -->
         <a class="experience-card" data-category="gastronomia" href="experience.html?slug=restaurants" style="text-decoration:none;color:inherit">
           <div class="card-image">
-            <img src="https://images.pexels.com/photos/1397132/pexels-photo-1397132.jpeg" alt="Restaurantes" width="400" height="267" loading="lazy">
+            <img src="https://res.cloudinary.com/dqn2v9mtu/image/upload/v1770398455/wmremove-transformed_ekmy9m.png" alt="Restaurantes" width="400" height="267" loading="lazy">
             <div class="card-badge"><span>10% - 40% OFF</span></div>
             <div class="like-badge" id="like-btn-restaurants" onclick="toggleLike(event, 'restaurants')">
               <i class="fas fa-heart"></i>
