--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
           mais e <strong>pagar menos</strong>, com total confiança.
         </p>
 
-        <p>Alguns parceiros podem ter restrições de datas para vouchers com desconto <strong>(especialmente aos fins de semana)</strong>.</p>
+        <p>Alguns parceiros podem ter restrições de datas para vouchers com desconto <strong>(especialmente aos fins de semana e feriados)</strong>.</p>
 
       </div>
 
