--- a/index.html
+++ b/index.html
@@ -493,30 +493,15 @@
     <div class="value-grid">
       
       <div class="value-text">
-        <h2>
-          Experiências selecionadas com
-          <span class="highlight-orange">vantagens exclusivas</span>
-        </h2>
+        <h2 data-i18n="valueSection.title"></h2>
 
-        <p>
-          O <strong>VoucherHub</strong> seleciona experiências de qualidade em
-          Lisboa e negoceia diretamente com parceiros locais para oferecer
-          <strong>condições especiais</strong> e <strong>preços reduzidos</strong>.
-        </p>
+        <p data-i18n="valueSection.p1"></p>
 
-        <p>
-          Aqui encontra aulas de surf, estúdios de yoga, passeios turísticos,
-          experiências de bem-estar e aventura — sempre com
-          <strong>descontos reais</strong> e sem custos escondidos.
-        </p>
+        <p data-i18n="valueSection.p2"></p>
 
-        <p>
-          O processo é simples: escolha a experiência, receba o voucher por
-          email e apresente-o diretamente no parceiro. Assim, pode aproveitar
-          mais e <strong>pagar menos</strong>, com total confiança.
-        </p>
+        <p data-i18n="valueSection.p3"></p>
 
-        <p>Alguns parceiros podem ter restrições de datas para vouchers com desconto <strong>(especialmente aos fins de semana e feriados)</strong>.</p>
+        <p data-i18n="valueSection.p4"></p>
 
       </div>
 
@@ -812,6 +797,6 @@
     </div>
 </div>
 <script src="i18n.js" defer></script>
-<script src="script.js" defender></script>
+<script src="script.js" defer></script>
 </body>
 </html>
