--- a/index.html
+++ b/index.html
@@ -457,6 +457,33 @@
           </div>
         </a>
 
+        <!-- Card: Experiencias aereas-->
+        <a class="experience-card" data-category="aventura" href="experience.html?slug=tour-aereas" style="text-decoration:none;color:inherit">
+          <div class="card-image">
+            <img src="https://images.pexels.com/photos/14814443/pexels-photo-14814443.jpeg" alt="Tour Aéreo" width="400" height="267" loading="lazy">
+            <div class="card-badge"><span>10% - 30% OFF</span></div>
+            <div class="like-badge" id="like-btn-tour-aereas" onclick="toggleLike(event, 'tour-aereas')">
+              <i class="fas fa-heart"></i>
+              <span class="like-count" id="like-count-tour-aereas">0</span>
+            </div>
+          </div>
+          <div class="card-content">
+            <i class="fas fa-cloud"></i>
+            <h3 data-i18n="experiences.aerialTour">Tour Aéreo</h3>
+            <div class="price-section">
+              <div class="price-original">€300</div>
+              <div class="price-discount">€270</div>
+              <div class="savings"><span data-i18n="experiences.save">Poupe</span> €30</div>
+            </div>
+            <div class="card-actions">
+              <span class="btn btn-code" style="pointer-events:none">
+                <i class="fas fa-arrow-right"></i>
+                <span data-i18n="experiences.seeTour">Ver passeios com desconto</span>
+              </span>
+            </div>
+          </div>
+        </a>
+
         <!-- Card: Restaurantes -->
         <a class="experience-card" data-category="gastronomia" href="experience.html?slug=restaurants" style="text-decoration:none;color:inherit">
           <div class="card-image">
